js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-async-function-import-attributes-trailing-comma-second.js
async
function
f
(
)
{
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
)
;
}
reportCompare
(
0
0
)
;
