js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-return-import-defer-no-rest-param.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
return
import
.
defer
(
.
.
.
[
'
.
/
empty_FIXTURE
.
js
'
]
)
;
}
